--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -342,7 +342,6 @@ set_real_ip_from 185.220.101.131;
 set_real_ip_from 185.220.101.134;
 set_real_ip_from 185.220.101.135;
 set_real_ip_from 185.220.101.136;
-set_real_ip_from 185.220.101.139;
 set_real_ip_from 185.220.101.14;
 set_real_ip_from 185.220.101.142;
 set_real_ip_from 185.220.101.143;
@@ -875,6 +874,7 @@ set_real_ip_from 204.8.96.83;
 set_real_ip_from 204.8.96.84;
 set_real_ip_from 204.8.96.85;
 set_real_ip_from 204.8.96.86;
+set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
@@ -890,6 +890,7 @@ set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.46.203;
+set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
@@ -1008,7 +1009,6 @@ set_real_ip_from 2.58.56.35;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.59.161.67;
 set_real_ip_from 2600:3c00::f03c:91ff:fe73:f9ba;
-set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
@@ -1261,6 +1261,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e653;
 set_real_ip_from 2620:7:6001::ffff:c759:e654;
 set_real_ip_from 2620:7:6001::ffff:c759:e655;
 set_real_ip_from 2620:7:6001::ffff:c759:e656;
+set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
@@ -1356,7 +1357,6 @@ set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1424,7 +1424,6 @@ set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::134;
 set_real_ip_from 2a0b:f4c2:1::135;
-set_real_ip_from 2a0b:f4c2:1::139;
 set_real_ip_from 2a0b:f4c2:1::142;
 set_real_ip_from 2a0b:f4c2:1::143;
 set_real_ip_from 2a0b:f4c2:1::145;
@@ -1685,7 +1684,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.138.16.107;
@@ -1740,6 +1738,7 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
+set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1775,7 +1774,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1822,7 +1820,6 @@ set_real_ip_from 66.78.40.182;
 set_real_ip_from 67.219.109.141;
 set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
-set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
 set_real_ip_from 74.82.47.194;
@@ -1853,7 +1850,6 @@ set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
