--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -116,7 +116,6 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
-allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -369,6 +368,7 @@ allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
+allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
@@ -463,7 +463,6 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -531,7 +530,6 @@ allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
-allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::145;
