--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -342,7 +342,6 @@ deny 185.220.101.131;
 deny 185.220.101.134;
 deny 185.220.101.135;
 deny 185.220.101.136;
-deny 185.220.101.139;
 deny 185.220.101.14;
 deny 185.220.101.142;
 deny 185.220.101.143;
@@ -875,6 +874,7 @@ deny 204.8.96.83;
 deny 204.8.96.84;
 deny 204.8.96.85;
 deny 204.8.96.86;
+deny 204.8.96.87;
 deny 204.8.96.88;
 deny 204.8.96.89;
 deny 205.185.113.180;
@@ -890,6 +890,7 @@ deny 209.141.32.181;
 deny 209.141.32.198;
 deny 209.141.37.94;
 deny 209.141.46.203;
+deny 209.141.51.180;
 deny 209.141.51.30;
 deny 209.141.54.203;
 deny 209.141.55.26;
@@ -1008,7 +1009,6 @@ deny 2.58.56.35;
 deny 2.58.56.43;
 deny 2.59.161.67;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
-deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -1261,6 +1261,7 @@ deny 2620:7:6001::ffff:c759:e653;
 deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
+deny 2620:7:6001::ffff:c759:e657;
 deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2620:95:4007::111;
@@ -1356,7 +1357,6 @@ deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1424,7 +1424,6 @@ deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::135;
-deny 2a0b:f4c2:1::139;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::145;
@@ -1685,7 +1684,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.247;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1740,6 +1738,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
@@ -1775,7 +1774,6 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1822,7 +1820,6 @@ deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
-deny 72.14.179.10;
 deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
@@ -1853,7 +1850,6 @@ deny 82.221.139.190;
 deny 82.85.247.254;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.239.46.144;
 deny 84.247.165.51;
