--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -116,6 +116,7 @@ allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
 allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -463,6 +464,7 @@ allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
