Update lists at 20241207-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -273,6 +273,7 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.157.161.143;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
@@ -627,6 +628,7 @@ allow 195.47.238.88;
 allow 195.47.238.89;
 allow 195.80.151.242;
 allow 195.88.74.206;
+allow 198.167.206.230;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1001,6 +1003,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.59.161.67;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
@@ -1281,6 +1284,7 @@ allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:6f8:2020:206:b::230;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1809,6 +1813,7 @@ allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
