--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -115,6 +115,7 @@ deny 2402:1f00:8100:400::9;
 deny 2407:3640:2207:8882::1;
 deny 2407:6ac0:8:1:0:1:1965:6c63;
 deny 2600:3c00::f03c:91ff:fe73:f9ba;
+deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
@@ -394,6 +395,7 @@ deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:6f8:2020:206:b::230;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
 deny 2a02:c204:2195:2012::1;
