--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -35,7 +35,6 @@ allow 104.244.79.50;
 allow 104.244.79.61;
 allow 104.254.90.187;
 allow 107.172.31.218;
-allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.174.146.25;
 allow 107.189.10.175;
@@ -274,7 +273,6 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.157.161.143;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.168.22.85;
@@ -582,6 +580,7 @@ allow 192.42.116.28;
 allow 192.99.149.111;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.164.155.120;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -616,6 +615,7 @@ allow 194.163.157.49;
 allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
+allow 194.26.192.97;
 allow 194.87.115.187;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -626,6 +626,10 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.88;
+allow 195.47.238.89;
+allow 195.47.238.90;
+allow 195.47.238.91;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -1285,6 +1289,7 @@ allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:6f8:2020:206:b::230;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1552,8 +1557,12 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -1655,7 +1664,6 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
-allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
@@ -1768,6 +1776,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1840,6 +1849,7 @@ allow 82.208.23.192;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
@@ -1885,7 +1895,6 @@ allow 91.208.75.178;
 allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
-allow 91.210.59.188;
 allow 91.219.236.101;
 allow 91.92.109.126;
 allow 91.92.109.43;
