--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -397,6 +397,7 @@ allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:6f8:2020:206:b::230;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -664,8 +665,12 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
 allow 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
@@ -767,6 +772,5 @@ allow 2a12:a800:2:1:45:80:158:205;
 allow 2a12:a800:2:1:45:80:158:23;
 allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:a800:2:1:45:80:158:69;
-allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d207:0:461::1;
