--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -43,7 +43,6 @@ set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
-set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.251;
@@ -197,7 +196,6 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
-set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.142.154;
 set_real_ip_from 178.17.170.144;
@@ -274,7 +272,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.168.22.85;
@@ -315,6 +312,7 @@ set_real_ip_from 185.220.100.252;
 set_real_ip_from 185.220.100.253;
 set_real_ip_from 185.220.100.254;
 set_real_ip_from 185.220.100.255;
+set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
 set_real_ip_from 185.220.101.100;
@@ -327,29 +325,36 @@ set_real_ip_from 185.220.101.106;
 set_real_ip_from 185.220.101.107;
 set_real_ip_from 185.220.101.108;
 set_real_ip_from 185.220.101.109;
+set_real_ip_from 185.220.101.11;
 set_real_ip_from 185.220.101.110;
+set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.129;
+set_real_ip_from 185.220.101.13;
 set_real_ip_from 185.220.101.130;
 set_real_ip_from 185.220.101.131;
 set_real_ip_from 185.220.101.134;
 set_real_ip_from 185.220.101.135;
 set_real_ip_from 185.220.101.136;
+set_real_ip_from 185.220.101.14;
 set_real_ip_from 185.220.101.142;
 set_real_ip_from 185.220.101.145;
 set_real_ip_from 185.220.101.147;
 set_real_ip_from 185.220.101.149;
+set_real_ip_from 185.220.101.15;
 set_real_ip_from 185.220.101.151;
 set_real_ip_from 185.220.101.154;
 set_real_ip_from 185.220.101.155;
 set_real_ip_from 185.220.101.156;
 set_real_ip_from 185.220.101.157;
 set_real_ip_from 185.220.101.158;
+set_real_ip_from 185.220.101.16;
 set_real_ip_from 185.220.101.161;
 set_real_ip_from 185.220.101.162;
 set_real_ip_from 185.220.101.163;
 set_real_ip_from 185.220.101.164;
 set_real_ip_from 185.220.101.168;
 set_real_ip_from 185.220.101.169;
+set_real_ip_from 185.220.101.17;
 set_real_ip_from 185.220.101.170;
 set_real_ip_from 185.220.101.172;
 set_real_ip_from 185.220.101.173;
@@ -358,15 +363,29 @@ set_real_ip_from 185.220.101.175;
 set_real_ip_from 185.220.101.176;
 set_real_ip_from 185.220.101.177;
 set_real_ip_from 185.220.101.179;
+set_real_ip_from 185.220.101.18;
 set_real_ip_from 185.220.101.182;
 set_real_ip_from 185.220.101.183;
 set_real_ip_from 185.220.101.187;
 set_real_ip_from 185.220.101.188;
 set_real_ip_from 185.220.101.189;
+set_real_ip_from 185.220.101.19;
 set_real_ip_from 185.220.101.190;
 set_real_ip_from 185.220.101.191;
 set_real_ip_from 185.220.101.2;
+set_real_ip_from 185.220.101.20;
+set_real_ip_from 185.220.101.21;
+set_real_ip_from 185.220.101.22;
+set_real_ip_from 185.220.101.23;
+set_real_ip_from 185.220.101.24;
+set_real_ip_from 185.220.101.25;
+set_real_ip_from 185.220.101.26;
+set_real_ip_from 185.220.101.27;
+set_real_ip_from 185.220.101.28;
+set_real_ip_from 185.220.101.29;
 set_real_ip_from 185.220.101.3;
+set_real_ip_from 185.220.101.30;
+set_real_ip_from 185.220.101.31;
 set_real_ip_from 185.220.101.32;
 set_real_ip_from 185.220.101.33;
 set_real_ip_from 185.220.101.34;
@@ -467,7 +486,6 @@ set_real_ip_from 185.246.84.179;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
-set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
@@ -619,7 +637,6 @@ set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
-set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
@@ -968,6 +985,7 @@ set_real_ip_from 23.154.177.4;
 set_real_ip_from 23.154.177.5;
 set_real_ip_from 23.154.177.6;
 set_real_ip_from 23.154.177.7;
+set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.8.104;
@@ -1013,7 +1031,6 @@ set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1394,8 +1411,10 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
+set_real_ip_from 2a0b:f4c2::11;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::134;
@@ -1431,7 +1450,19 @@ set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
 set_real_ip_from 2a0b:f4c2:1::190;
 set_real_ip_from 2a0b:f4c2:1::191;
+set_real_ip_from 2a0b:f4c2::12;
+set_real_ip_from 2a0b:f4c2::13;
+set_real_ip_from 2a0b:f4c2::14;
+set_real_ip_from 2a0b:f4c2::15;
+set_real_ip_from 2a0b:f4c2::16;
+set_real_ip_from 2a0b:f4c2::17;
+set_real_ip_from 2a0b:f4c2::18;
+set_real_ip_from 2a0b:f4c2::19;
 set_real_ip_from 2a0b:f4c2::2;
+set_real_ip_from 2a0b:f4c2::20;
+set_real_ip_from 2a0b:f4c2::21;
+set_real_ip_from 2a0b:f4c2::22;
+set_real_ip_from 2a0b:f4c2::23;
 set_real_ip_from 2a0b:f4c2:2::32;
 set_real_ip_from 2a0b:f4c2:2::33;
 set_real_ip_from 2a0b:f4c2:2::34;
@@ -1440,6 +1471,7 @@ set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
+set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
@@ -1450,6 +1482,7 @@ set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
+set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
@@ -1460,11 +1493,17 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
+set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
+set_real_ip_from 2a0b:f4c2::27;
+set_real_ip_from 2a0b:f4c2::28;
+set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
+set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2:3::64;
 set_real_ip_from 2a0b:f4c2:3::65;
 set_real_ip_from 2a0b:f4c2:3::66;
@@ -1693,7 +1732,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1731,6 +1769,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
