--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -143,7 +143,6 @@ allow 2604:6600:0:42::2;
 allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -523,8 +522,10 @@ allow 2a0b:f4c0:16c:6::1;
 allow 2a0b:f4c0:16c:7::1;
 allow 2a0b:f4c0:16c:8::1;
 allow 2a0b:f4c0:16c:9::1;
+allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
+allow 2a0b:f4c2::11;
 allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::134;
@@ -560,7 +561,19 @@ allow 2a0b:f4c2:1::188;
 allow 2a0b:f4c2:1::189;
 allow 2a0b:f4c2:1::190;
 allow 2a0b:f4c2:1::191;
+allow 2a0b:f4c2::12;
+allow 2a0b:f4c2::13;
+allow 2a0b:f4c2::14;
+allow 2a0b:f4c2::15;
+allow 2a0b:f4c2::16;
+allow 2a0b:f4c2::17;
+allow 2a0b:f4c2::18;
+allow 2a0b:f4c2::19;
 allow 2a0b:f4c2::2;
+allow 2a0b:f4c2::20;
+allow 2a0b:f4c2::21;
+allow 2a0b:f4c2::22;
+allow 2a0b:f4c2::23;
 allow 2a0b:f4c2:2::32;
 allow 2a0b:f4c2:2::33;
 allow 2a0b:f4c2:2::34;
@@ -569,6 +582,7 @@ allow 2a0b:f4c2:2::36;
 allow 2a0b:f4c2:2::37;
 allow 2a0b:f4c2:2::38;
 allow 2a0b:f4c2:2::39;
+allow 2a0b:f4c2::24;
 allow 2a0b:f4c2:2::40;
 allow 2a0b:f4c2:2::41;
 allow 2a0b:f4c2:2::42;
@@ -579,6 +593,7 @@ allow 2a0b:f4c2:2::46;
 allow 2a0b:f4c2:2::47;
 allow 2a0b:f4c2:2::48;
 allow 2a0b:f4c2:2::49;
+allow 2a0b:f4c2::25;
 allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
@@ -589,11 +604,17 @@ allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
 allow 2a0b:f4c2:2::58;
 allow 2a0b:f4c2:2::59;
+allow 2a0b:f4c2::26;
 allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2::27;
+allow 2a0b:f4c2::28;
+allow 2a0b:f4c2::29;
 allow 2a0b:f4c2::3;
+allow 2a0b:f4c2::30;
+allow 2a0b:f4c2::31;
 allow 2a0b:f4c2:3::64;
 allow 2a0b:f4c2:3::65;
 allow 2a0b:f4c2:3::66;
