--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -143,7 +143,6 @@ set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
-set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -523,8 +522,10 @@ set_real_ip_from 2a0b:f4c0:16c:6::1;
 set_real_ip_from 2a0b:f4c0:16c:7::1;
 set_real_ip_from 2a0b:f4c0:16c:8::1;
 set_real_ip_from 2a0b:f4c0:16c:9::1;
+set_real_ip_from 2a0b:f4c2::;
 set_real_ip_from 2a0b:f4c2::1;
 set_real_ip_from 2a0b:f4c2::10;
+set_real_ip_from 2a0b:f4c2::11;
 set_real_ip_from 2a0b:f4c2:1::129;
 set_real_ip_from 2a0b:f4c2:1::130;
 set_real_ip_from 2a0b:f4c2:1::134;
@@ -560,7 +561,19 @@ set_real_ip_from 2a0b:f4c2:1::188;
 set_real_ip_from 2a0b:f4c2:1::189;
 set_real_ip_from 2a0b:f4c2:1::190;
 set_real_ip_from 2a0b:f4c2:1::191;
+set_real_ip_from 2a0b:f4c2::12;
+set_real_ip_from 2a0b:f4c2::13;
+set_real_ip_from 2a0b:f4c2::14;
+set_real_ip_from 2a0b:f4c2::15;
+set_real_ip_from 2a0b:f4c2::16;
+set_real_ip_from 2a0b:f4c2::17;
+set_real_ip_from 2a0b:f4c2::18;
+set_real_ip_from 2a0b:f4c2::19;
 set_real_ip_from 2a0b:f4c2::2;
+set_real_ip_from 2a0b:f4c2::20;
+set_real_ip_from 2a0b:f4c2::21;
+set_real_ip_from 2a0b:f4c2::22;
+set_real_ip_from 2a0b:f4c2::23;
 set_real_ip_from 2a0b:f4c2:2::32;
 set_real_ip_from 2a0b:f4c2:2::33;
 set_real_ip_from 2a0b:f4c2:2::34;
@@ -569,6 +582,7 @@ set_real_ip_from 2a0b:f4c2:2::36;
 set_real_ip_from 2a0b:f4c2:2::37;
 set_real_ip_from 2a0b:f4c2:2::38;
 set_real_ip_from 2a0b:f4c2:2::39;
+set_real_ip_from 2a0b:f4c2::24;
 set_real_ip_from 2a0b:f4c2:2::40;
 set_real_ip_from 2a0b:f4c2:2::41;
 set_real_ip_from 2a0b:f4c2:2::42;
@@ -579,6 +593,7 @@ set_real_ip_from 2a0b:f4c2:2::46;
 set_real_ip_from 2a0b:f4c2:2::47;
 set_real_ip_from 2a0b:f4c2:2::48;
 set_real_ip_from 2a0b:f4c2:2::49;
+set_real_ip_from 2a0b:f4c2::25;
 set_real_ip_from 2a0b:f4c2:2::50;
 set_real_ip_from 2a0b:f4c2:2::51;
 set_real_ip_from 2a0b:f4c2:2::52;
@@ -589,11 +604,17 @@ set_real_ip_from 2a0b:f4c2:2::56;
 set_real_ip_from 2a0b:f4c2:2::57;
 set_real_ip_from 2a0b:f4c2:2::58;
 set_real_ip_from 2a0b:f4c2:2::59;
+set_real_ip_from 2a0b:f4c2::26;
 set_real_ip_from 2a0b:f4c2:2::60;
 set_real_ip_from 2a0b:f4c2:2::61;
 set_real_ip_from 2a0b:f4c2:2::62;
 set_real_ip_from 2a0b:f4c2:2::63;
+set_real_ip_from 2a0b:f4c2::27;
+set_real_ip_from 2a0b:f4c2::28;
+set_real_ip_from 2a0b:f4c2::29;
 set_real_ip_from 2a0b:f4c2::3;
+set_real_ip_from 2a0b:f4c2::30;
+set_real_ip_from 2a0b:f4c2::31;
 set_real_ip_from 2a0b:f4c2:3::64;
 set_real_ip_from 2a0b:f4c2:3::65;
 set_real_ip_from 2a0b:f4c2:3::66;
