Update lists at 20241211-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,7 +117,6 @@ allow 137.184.197.55;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 139.99.8.57;
-allow 141.11.25.44;
 allow 141.98.11.62;
 allow 142.171.12.88;
 allow 142.44.133.81;
@@ -190,7 +189,6 @@ allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.202;
-allow 177.149.142.154;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -217,6 +215,7 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
+allow 179.55.88.199;
 allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -264,6 +263,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -586,6 +586,7 @@ allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
 allow 193.218.118.137;
+allow 193.218.118.160;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
@@ -889,7 +890,6 @@ allow 209.141.55.26;
 allow 209.141.60.219;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.34.128.111;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -954,6 +954,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -991,7 +992,6 @@ allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 allow 2402:1f00:8000:239::;
 allow 2402:1f00:8100:400::9;
 allow 2407:3640:2207:8882::1;
-allow 2407:6ac0:8:1:0:1:1965:6c63;
 allow 24.240.72.170;
 allow 2.56.10.36;
 allow 2.58.56.220;
@@ -1268,6 +1268,7 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a01:239:2be:1400::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1600,6 +1601,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
+allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
@@ -1847,6 +1849,7 @@ allow 84.247.165.51;
 allow 85.17.9.83;
 allow 85.239.41.130;
 allow 85.93.218.204;
+allow 87.106.78.113;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.12;
