--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -119,6 +119,7 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
+allow 2601:14d:4b01:1dec::a70;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -141,6 +142,7 @@ allow 2604:6600:0:42::2;
 allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -359,6 +361,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
+allow 2a04:52c0:129:2098::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
