Update lists at 20241213-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,6 +149,7 @@ allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -261,13 +262,13 @@ allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.132.53.12;
+allow 185.132.53.47;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -925,6 +926,7 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
