--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -135,6 +135,7 @@ deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
