--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,6 +149,7 @@ set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -261,13 +262,13 @@ set_real_ip_from 185.130.44.108;
 set_real_ip_from 185.130.44.43;
 set_real_ip_from 185.130.47.58;
 set_real_ip_from 185.132.53.12;
+set_real_ip_from 185.132.53.47;
 set_real_ip_from 185.142.239.49;
 set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -925,6 +926,7 @@ set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
